--- a/index.html
+++ b/index.html
@@ -83,5 +83,14 @@
 			return false;
 		}
 	</script>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-172362331-1"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'UA-172362331-1');
+	</script>
 </body>
 </html>
